err/django-openstack.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_nose'...
Listing './lib/python3.5/site-packages/django_nose/management'...
Listing './lib/python3.5/site-packages/django_nose/management/commands'...
Listing './lib/python3.5/site-packages/django_nose-1.4.5.dist-info'...
Listing './lib/python3.5/site-packages/django_openstack'...
Compiling './lib/python3.5/site-packages/django_openstack/api.py'...
***   File "./lib/python3.5/site-packages/django_openstack/api.py", line 97
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_openstack/auth'...
Compiling './lib/python3.5/site-packages/django_openstack/context_processors.py'...
***   File "./lib/python3.5/site-packages/django_openstack/context_processors.py", line 33
    except api_exceptions.BadRequest, e:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_openstack/dash'...
Listing './lib/python3.5/site-packages/django_openstack/dash/views'...
Compiling './lib/python3.5/site-packages/django_openstack/dash/views/containers.py'...
***   File "./lib/python3.5/site-packages/django_openstack/dash/views/containers.py", line 46
    except ContainerNotEmpty, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_openstack/dash/views/floating_ips.py'...
***   File "./lib/python3.5/site-packages/django_openstack/dash/views/floating_ips.py", line 48
    except novaclient_exceptions.ClientException, e:
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_openstack/dash/views/images.py'...
***   File "./lib/python3.5/site-packages/django_openstack/dash/views/images.py", line 64
    except glance_exception.ClientConnectionError, e:
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_openstack/dash/views/instances.py'...
***   File "./lib/python3.5/site-packages/django_openstack/dash/views/instances.py", line 54
    except api_exceptions.ApiException, e:
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_openstack/dash/views/keypairs.py'...
***   File "./lib/python3.5/site-packages/django_openstack/dash/views/keypairs.py", line 50
    except novaclient_exceptions.ClientException, e:
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_openstack/dash/views/networks.py'...
***   File "./lib/python3.5/site-packages/django_openstack/dash/views/networks.py", line 58
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_openstack/dash/views/ports.py'...
***   File "./lib/python3.5/site-packages/django_openstack/dash/views/ports.py", line 51
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_openstack/dash/views/security_groups.py'...
***   File "./lib/python3.5/site-packages/django_openstack/dash/views/security_groups.py", line 60
    except novaclient_exceptions.ClientException, e:
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_openstack/dash/views/snapshots.py'...
***   File "./lib/python3.5/site-packages/django_openstack/dash/views/snapshots.py", line 64
    except api_exceptions.ApiException, e:
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_openstack/forms.py'...
***   File "./lib/python3.5/site-packages/django_openstack/forms.py", line 65
    print "Render %s %s" % (name, value)
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_openstack/middleware'...
Listing './lib/python3.5/site-packages/django_openstack/syspanel'...
Listing './lib/python3.5/site-packages/django_openstack/syspanel/views'...
Compiling './lib/python3.5/site-packages/django_openstack/syspanel/views/flavors.py'...
***   File "./lib/python3.5/site-packages/django_openstack/syspanel/views/flavors.py", line 73
    except api_exceptions.ApiException, e:
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_openstack/syspanel/views/images.py'...
***   File "./lib/python3.5/site-packages/django_openstack/syspanel/views/images.py", line 45
    except glance_exception.ClientConnectionError, e:
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_openstack/syspanel/views/instances.py'...
***   File "./lib/python3.5/site-packages/django_openstack/syspanel/views/instances.py", line 141
    except api_exceptions.ApiException, e:
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_openstack/syspanel/views/services.py'...
***   File "./lib/python3.5/site-packages/django_openstack/syspanel/views/services.py", line 64
    except api_exceptions.ApiException, e:
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_openstack/syspanel/views/tenants.py'...
***   File "./lib/python3.5/site-packages/django_openstack/syspanel/views/tenants.py", line 59
    except api_exceptions.ApiException, e:
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_openstack/syspanel/views/users.py'...
***   File "./lib/python3.5/site-packages/django_openstack/syspanel/views/users.py", line 107
    except api_exceptions.ApiException, e:
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_openstack/templatetags'...
Listing './lib/python3.5/site-packages/django_openstack/templatetags/templatetags'...
Listing './lib/python3.5/site-packages/django_openstack/tests'...
Listing './lib/python3.5/site-packages/django_openstack/tests/view_tests'...
Listing './lib/python3.5/site-packages/django_openstack/tests/view_tests/dash'...
Listing './lib/python3.5/site-packages/django_openstack/tests/view_tests/syspanel'...
Listing './lib/python3.5/site-packages/django_openstack-0.4.egg-info'...
Listing './lib/python3.5/site-packages/mox-0.5.3.egg-info'...
Compiling './lib/python3.5/site-packages/mox.py'...
***   File "./lib/python3.5/site-packages/mox.py", line 1232
    raise NotImplementedError, 'method must be implemented by a subclass.'
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/testapp'...
Listing './lib/python3.5/site-packages/testapp/migrations'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
